# checkers_ai

./: LICENSE  README.md
checkpoints/: best.onnx
shashka_ai/: analyze.py  arena_rust.py  bench.py  checkers_engine.py  game.py  gui_common.py  inference.py  mcts.py  network.py  play.py  requirements.txt  safety.py  selfplay.py  selfplay_rust.py  test_diff.py  test_engine.py  test_pipeline.py  train.py
shashka_ai/rust/: Cargo.toml
shashka_ai/rust/src/: engine.rs  lib.rs  mcts.rs
shashka_desktop/: README.md
shashka_desktop/src/: index.html  main.js  styles.css
shashka_desktop/src-tauri/: Cargo.toml  tauri.conf.json
shashka_desktop/src-tauri/capabilities/: default.json
shashka_desktop/src-tauri/models/: README.txt
shashka_desktop/src-tauri/src/: ai.rs  engine.rs  lib.rs  main.rs
