[package]
name = "shashka_engine"
version = "1.0.0"
edition = "2021"

[lib]
name = "shashka_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"
once_cell = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
