[package]
name = "shashka-desktop"
version = "1.0.0"
description = "Rus shashkasi — AI raqib (Tauri + Rust + ONNX)"
authors = ["Dilshod"]
edition = "2021"
rust-version = "1.77"

# lib (Tauri 2 uslubi) + binary
[lib]
name = "shashka_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
# ONNX Runtime (CPU). `download-binaries` — ORT kutubxonasini avtomatik
# yuklab oladi, alohida o'rnatish shart emas.
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
